fix overlap

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html, body {
     background-color: rgb(221, 199, 213);
-    color: rgb(147, 14, 14);
+    color: rgb(97, 1, 1);
     font-family: 'Fanwood Text', serif;
     font-size: 20px;
 }
@@ -20,7 +20,7 @@ p {
     width: 55%;
 }
 
-.highlight {
+.picture {
   cursor: pointer;
   /* border-bottom: 1px dotted blue;  */
 }
@@ -38,12 +38,13 @@ p {
 
 #poem-title-popup {
   display: none; 
-  position: absolute;
-  left: auto;
-  right: auto; 
-  max-width: 600px;
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 50vw;
   margin: 0 auto;
-  background: #d4d8f7;
+  background: #fef9ff;
   padding: 10px;
   font-size: 16px;
   font-style:italic;
